fix: add ExportOptions.plist build step 🧾

--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -33,7 +33,8 @@ jobs:
           npm install
 
           echo "🧱 (Re)building iOS platform..."
-         
+          cordova platform remove ios || true
+          cordova platform add ios
           echo "📂 Inspecting platforms/ios:"
           ls -R platforms/ios
 
@@ -82,12 +83,12 @@ jobs:
           echo "📘 Building workspace/project..."
           security list-keychains -s ~/Library/Keychains/ios-build.keychain
 
-          if [ -e "farra.xcworkspace" ]; then
+          if [ -e "Farra.xcworkspace" ]; then
             echo "📘 Using .xcworkspace"
-            xcodebuild -workspace farra.xcworkspace \
+            xcodebuild -workspace Farra.xcworkspace \
               -scheme farra \
               -configuration Release \
-              -archivePath $PWD/../../build/farra.xcarchive \
+              -archivePath $PWD/../../build/Farra.xcarchive \
               clean archive \
               -destination generic/platform=iOS \
               CODE_SIGN_STYLE=Manual \
@@ -97,10 +98,10 @@ jobs:
               OTHER_CODE_SIGN_FLAGS="--keychain ~/Library/Keychains/ios-build.keychain"
           else
             echo "📗 Using .xcodeproj"
-            xcodebuild -project farra.xcodeproj \
+            xcodebuild -project Farra.xcodeproj \
               -scheme farra \
               -configuration Release \
-              -archivePath $PWD/../../build/farra.xcarchive \
+              -archivePath $PWD/../../build/Farra.xcarchive \
               clean archive \
               -destination generic/platform=iOS \
               CODE_SIGN_STYLE=Manual \
