--- a/.github/workflows/ExportOptions.plist
+++ b/.github/workflows/ExportOptions.plist
@@ -9,7 +9,7 @@
     <string>72M97MR8UU</string>
     <key>provisioningProfiles</key>
 <dict>
-    <key>com.farra.app</key>
+    <key>com.App.app</key>
     <string>${PROFILE_UUID}</string>
 </dict>
 
