--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -33,8 +33,7 @@ jobs:
           npm install
 
           echo "🧱 (Re)building iOS platform..."
-          cordova platform remove ios || true
-          cordova platform add ios
+         
           echo "📂 Inspecting platforms/ios:"
           ls -R platforms/ios
 
@@ -83,12 +82,12 @@ jobs:
           echo "📘 Building workspace/project..."
           security list-keychains -s ~/Library/Keychains/ios-build.keychain
 
-          if [ -e "App.xcworkspace" ]; then
+          if [ -e "farra.xcworkspace" ]; then
             echo "📘 Using .xcworkspace"
-            xcodebuild -workspace App.xcworkspace \
-              -scheme App \
+            xcodebuild -workspace farra.xcworkspace \
+              -scheme farra \
               -configuration Release \
-              -archivePath $PWD/../../build/App.xcarchive \
+              -archivePath $PWD/../../build/farra.xcarchive \
               clean archive \
               -destination generic/platform=iOS \
               CODE_SIGN_STYLE=Manual \
@@ -98,10 +97,10 @@ jobs:
               OTHER_CODE_SIGN_FLAGS="--keychain ~/Library/Keychains/ios-build.keychain"
           else
             echo "📗 Using .xcodeproj"
-            xcodebuild -project App.xcodeproj \
-              -scheme App \
+            xcodebuild -project farra.xcodeproj \
+              -scheme farra \
               -configuration Release \
-              -archivePath $PWD/../../build/App.xcarchive \
+              -archivePath $PWD/../../build/farra.xcarchive \
               clean archive \
               -destination generic/platform=iOS \
               CODE_SIGN_STYLE=Manual \
