--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^14.0.1",
+    "cordova-ios": "^7.1.1",
     "cordova-plugin-statusbar": "^4.0.0"
   },
   "cordova": {
@@ -39,7 +40,6 @@
     "braces": "^3.0.3",
     "concat-map": "^0.0.1",
     "cordova-common": "^5.0.1",
-    "cordova-ios": "8.0.0",
     "cross-spawn": "^7.0.6",
     "dedent": "^1.7.0",
     "elementtree": "^0.1.7",
