--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -33,7 +33,8 @@ jobs:
           npm install
 
           echo "🧱 (Re)building iOS platform..."
-         
+          cordova platform remove ios || true
+          cordova platform add ios
           echo "📂 Inspecting platforms/ios:"
           ls -R platforms/ios
 
