--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -33,7 +33,9 @@ jobs:
           npm install
 
           echo "🧱 (Re)building iOS platform..."
-         
+            cordova platform remove ios
+            cordova platform add ios@7.1.1
+
           echo "📂 Inspecting platforms/ios:"
           ls -R platforms/ios
 
