fix: add ExportOptions.plist build step 🧾

--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -1,4 +1,4 @@
-name: iOS Build & Sign - Farra (Cordova Auto-Setup)
+name: iOS Build & Upload to TestFlight with Fastlane
 
 on:
   workflow_dispatch:
@@ -15,34 +15,42 @@ jobs:
       P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
       PROFILE: ${{ secrets.PP_BASE64 }}
       TEAM_ID: 72M97MR8UU
+      FASTLANE_USER: ${{ secrets.APPLE_ID }}
+      FASTLANE_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
+      FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
 
     steps:
       # -------------------------------
-      # 1️⃣ Checkout project
+      # 1️⃣ Checkout
       # -------------------------------
       - name: 🧩 Checkout repository
         uses: actions/checkout@v4
 
       # -------------------------------
-      # 2️⃣ Setup Node & Cordova iOS platform
+      # 2️⃣ Setup Cordova
       # -------------------------------
       - name: ⚙️ Setup Cordova environment
         run: |
-          echo "⬇️ Installing Cordova environment..."
+          echo "⬇️ Installing Cordova..."
           npm install -g cordova
           npm install
 
-          echo "🧱 (Re)building iOS platform..."
+          echo "🧱 Rebuilding iOS platform..."
           cordova platform remove ios
           cordova platform add ios@7.1.1
 
-          echo "📂 Inspecting platforms/ios:"
-          ls -R platforms/ios
+      # -------------------------------
+      # 3️⃣ Install Fastlane
+      # -------------------------------
+      - name: 📦 Install Fastlane
+        run: |
+          sudo gem install fastlane -NV
+          fastlane --version
 
       # -------------------------------
-      # 3️⃣ Provisioning Profile & Certificate Setup
+      # 4️⃣ Certificate & Profile Setup
       # -------------------------------
-      - name: 🔑 Import Certificate & Install Provisioning Profile
+      - name: 🔑 Import Certificate & Provisioning Profile
         run: |
           mkdir -p ~/signing
           echo "$PROFILE" | base64 --decode > ~/signing/profile.mobileprovision
@@ -50,11 +58,10 @@ jobs:
 
           uuid=$(/usr/libexec/PlistBuddy -c "Print UUID" /dev/stdin <<< "$(security cms -D -i ~/signing/profile.mobileprovision)")
           echo "PROFILE_UUID=$uuid" >> $GITHUB_ENV
-          echo "✅ Provisioning Profile UUID: $uuid"
+          echo "✅ Profile UUID: $uuid"
 
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp ~/signing/profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/$uuid.mobileprovision
-          echo "✅ Provisioning profile installed."
 
           echo -n "${{ secrets.P12_PASSWORD }}" | LC_ALL=C tr -d '\r\n' > ~/signing/p12pass.txt
           P12_PASS_CLEAN=$(<~/signing/p12pass.txt)
@@ -62,13 +69,13 @@ jobs:
           security create-keychain -p temp-pass ios-build.keychain
           security unlock-keychain -p temp-pass ios-build.keychain
           security set-keychain-settings -lut 3600 ios-build.keychain
-          security import ~/signing/dist.p12 -k ~/Library/Keychains/ios-build.keychain -A -P "$P12_PASS_CLEAN" -f pkcs12 -T /usr/bin/codesign -T /usr/bin/security
-          security set-key-partition-list -S apple-tool:,apple:,codesign:,keychain: -k temp-pass ~/Library/Keychains/ios-build.keychain
+          security import ~/signing/dist.p12 -k ~/Library/Keychains/ios-build.keychain -A -P "$P12_PASS_CLEAN" -f pkcs12 -T /usr/bin/codesign
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -k temp-pass ~/Library/Keychains/ios-build.keychain
           security list-keychains -s ~/Library/Keychains/ios-build.keychain
-          echo "✅ Certificate ready for codesign tools."
+          echo "✅ Certificate imported."
 
       # -------------------------------
-      # 4️⃣ Setup Xcode
+      # 5️⃣ Setup Xcode
       # -------------------------------
       - name: ⚙️ Setup Xcode
         run: |
@@ -76,48 +83,39 @@ jobs:
           xcodebuild -version
 
       # -------------------------------
-      # 🔢 NEW: Auto-increment Build Number
+      # 6️⃣ Auto-increment Build Number
       # -------------------------------
       - name: 🔢 Auto-increment Build Number
         run: |
           cd platforms/ios
-          
-          # پیدا کردن فایل Info.plist
           INFO_PLIST="farra/farra-Info.plist"
           
           if [ ! -f "$INFO_PLIST" ]; then
-            echo "❌ Info.plist not found at $INFO_PLIST"
-            echo "📂 Searching for Info.plist files..."
+            echo "❌ Info.plist not found!"
             find . -name "*Info.plist" -type f
             exit 1
           fi
           
-          # خواندن Build Number فعلی
           CURRENT_BUILD=$(/usr/libexec/PlistBuddy -c "Print :CFBundleVersion" "$INFO_PLIST" 2>/dev/null || echo "1")
-          echo "📊 Current Build Number: $CURRENT_BUILD"
+          echo "📊 Current Build: $CURRENT_BUILD"
           
-          # ایجاد Build Number جدید بر اساس timestamp
           NEW_BUILD=$(date +%Y%m%d%H%M)
-          echo "📊 New Build Number: $NEW_BUILD"
+          echo "📊 New Build: $NEW_BUILD"
           
-          # تنظیم Build Number جدید
           /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $NEW_BUILD" "$INFO_PLIST"
           
-          # تایید تغییرات
           VERIFY_BUILD=$(/usr/libexec/PlistBuddy -c "Print :CFBundleVersion" "$INFO_PLIST")
-          echo "✅ Build number updated to: $VERIFY_BUILD"
+          echo "✅ Build updated to: $VERIFY_BUILD"
 
       # -------------------------------
-      # 5️⃣ Build & Archive Signed App
+      # 7️⃣ Archive App
       # -------------------------------
-      - name: 🚀 Archive the app (Signed)
+      - name: 🚀 Archive the app
         run: |
           cd platforms/ios
-          echo "📘 Building workspace/project..."
           security list-keychains -s ~/Library/Keychains/ios-build.keychain
 
           if [ -e "farra.xcworkspace" ]; then
-            echo "📘 Using .xcworkspace"
             xcodebuild -workspace farra.xcworkspace \
               -scheme farra \
               -configuration Release \
@@ -130,7 +128,6 @@ jobs:
               DEVELOPMENT_TEAM="$TEAM_ID" \
               OTHER_CODE_SIGN_FLAGS="--keychain ~/Library/Keychains/ios-build.keychain"
           else
-            echo "📗 Using .xcodeproj"
             xcodebuild -project farra.xcodeproj \
               -scheme farra \
               -configuration Release \
@@ -143,10 +140,10 @@ jobs:
               DEVELOPMENT_TEAM="$TEAM_ID" \
               OTHER_CODE_SIGN_FLAGS="--keychain ~/Library/Keychains/ios-build.keychain"
           fi
-          echo "✅ Archive phase completed."
+          echo "✅ Archive completed."
 
       # -------------------------------
-      # 📄 Create ExportOptions.plist
+      # 8️⃣ Create ExportOptions.plist
       # -------------------------------
       - name: 🧾 Create ExportOptions.plist
         run: |
@@ -176,20 +173,19 @@ jobs:
           </dict>
           </plist>
           EOF
-          echo "✅ ExportOptions.plist created successfully with UUID ${PROFILE_UUID}"
+          echo "✅ ExportOptions.plist created."
 
       # -------------------------------
-      # 6️⃣ Export signed IPA
+      # 9️⃣ Export IPA
       # -------------------------------
       - name: 📦 Export IPA from Archive
         run: |
           cd platforms/ios
-          echo "📦 Exporting IPA..."
           security list-keychains -s ~/Library/Keychains/ios-build.keychain
           security unlock-keychain -p temp-pass ~/Library/Keychains/ios-build.keychain
 
           xcodebuild -exportArchive \
-            -archivePath $PWD/../../build/Farra.xcarchive \
+            -archivePath $PWD/../../build/farra.xcarchive \
             -exportOptionsPlist ../../ExportOptions.plist \
             -exportPath $PWD \
             CODE_SIGN_STYLE=Manual \
@@ -197,42 +193,34 @@ jobs:
             DEVELOPMENT_TEAM=$TEAM_ID \
             OTHER_CODE_SIGN_FLAGS="--keychain ~/Library/Keychains/ios-build.keychain"
 
-          echo "✅ IPA exported at: $(ls -1 Farra.ipa || echo '❌ Missing!')"
+          echo "✅ IPA exported: $(ls -1 Farra.ipa || echo '❌ Missing!')"
 
       # -------------------------------
-      # 7️⃣ Verify Bundle ID
+      # 🔟 Upload Artifact
       # -------------------------------
-      - name: 🔍 Verify Bundle ID in IPA
-        run: |
-          echo "Verifying Bundle ID..."
-          unzip -q platforms/ios/Farra.ipa 'Payload/*.app/Info.plist' -d /tmp
-          INFO_PLIST=$(find /tmp/Payload -name Info.plist)
-          BUNDLE_ID=$(plutil -extract CFBundleIdentifier xml1 -o - "$INFO_PLIST" | xmllint --xpath 'string(//string)' -)
-          echo "Extracted Bundle ID: $BUNDLE_ID"
-
-          if [ "$BUNDLE_ID" != "com.farra.app" ]; then
-            echo "❌ Incorrect Bundle ID ($BUNDLE_ID)"
-            exit 1
-          fi
-          echo "✅ Bundle ID verified successfully."
-
-      # -------------------------------
-      # 8️⃣ Upload Signed IPA as Artifact
-      # -------------------------------
-      - name: ⬆️ Upload Signed IPA Artifact
+      - name: ⬆️ Upload IPA Artifact
         uses: actions/upload-artifact@v4
         with:
           name: farra-signed
           path: platforms/ios/Farra.ipa
 
       # -------------------------------
-      # 9️⃣ Upload to App Store Connect
+      # 1️⃣1️⃣ Upload to TestFlight با Fastlane
       # -------------------------------
-      - name: 📤 Upload to App Store Connect
+      - name: 🚀 Upload to TestFlight with Fastlane
         run: |
-          echo "🚀 Uploading IPA to App Store Connect..."
-          xcrun altool --upload-app \
-            --type ios \
-            --file "platforms/ios/Farra.ipa" \
-            --username "farokgraphic@gmail.com" \
-            --password "xhjf-xsvk-lcfe-yoda"
+          cd platforms/ios
+          
+          echo "🚀 Uploading to TestFlight with notifications..."
+          
+          fastlane pilot upload \
+            --username "$FASTLANE_USER" \
+            --app_identifier "com.farra.app" \
+            --team_id "$TEAM_ID" \
+            --ipa "Farra.ipa" \
+            --skip_waiting_for_build_processing \
+            --notify_external_testers true \
+            --changelog "نسخه جدید آماده است! لطفا تست کنید." \
+            --distribute_external true
+          
+          echo "✅ Upload completed! External testers will receive email notification."
