--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -33,7 +33,8 @@ jobs:
           npm install
 
           echo "🧱 (Re)building iOS platform..."
-            
+            cordova platform remove ios
+            cordova platform add ios@7.1.1
 
           echo "📂 Inspecting platforms/ios:"
           ls -R platforms/ios
@@ -198,9 +199,21 @@ jobs:
       # -------------------------------
       - name: 📤 Upload to App Store Connect
         run: |
-          echo "🚀 Uploading IPA to App Store Connect..."
-          xcrun altool --upload-app \
-            --type ios \
-            --file "platforms/ios/Farra.ipa" \
-            --username "farokgraphic@gmail.com" \
-            --password "xhjf-xsvk-lcfe-yoda"
+          cd platforms/ios
+          
+          echo "🚀 Uploading to TestFlight with notifications..."
+          
+          fastlane pilot upload \
+            --username "$FASTLANE_USER" \
+            --app_identifier "com.farra.app" \
+            --team_id "$TEAM_ID" \
+            --ipa "Farra.ipa" \
+            --skip_waiting_for_build_processing \
+            --notify_external_testers true \
+            --changelog "نسخه جدید آماده است! لطفا تست کنید." \
+            --distribute_external true
+          
+          echo "✅ Upload completed! External testers will receive email notification."
+        env:
+          FASTLANE_USER: ${{ secrets.APPLE_ID }}
+          FASTLANE_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
