feat: Add i18n support with JSON and data-attributes

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cordova-ios": "^7.1.1",
     "cordova-plugin-file": "^8.1.3",
     "cordova-plugin-intent": "github:napolitano/cordova-plugin-intent",
-    "cordova-plugin-statusbar": "^4.0.0"
+    "cordova-plugin-statusbar": "^4.0.0",
+    "cordova-plugin-webintent": "^0.0.2"
   },
   "cordova": {
     "platforms": [
@@ -28,12 +29,10 @@
     "plugins": {
       "cordova-plugin-statusbar": {},
       "com.darktalker.cordova.screenshot": {},
-      "com.napolitano.cordova.plugin.intent": {
-        "PACKAGE_NAME": "com.farra.app"
-      },
       "cordova-plugin-file": {
         "ANDROIDX_WEBKIT_VERSION": "1.4.0"
-      }
+      },
+      "com.borismus.webintent": {}
     }
   },
   "dependencies": {
